// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarketplacePage should match snapshot for loading state 1`] = `
.emotion-1 {
  background-color: #f7f9fa;
}

.emotion-0 {
  position: relative;
  margin-bottom: 1rem;
}

<div>
  <div
    class="Workbench__Workbench___THi9K emotion-1"
    data-test-id="cf-ui-workbench"
  >
    <div
      class="Workbench__Workbench__header___2wo2E"
      data-test-id="cf-ui-workbench-header"
    >
      <div
        class="Workbench__Workbench__header-icon___1kJlL"
      >
        <div
          class="ProductIcon__ProductIconContainer___KxjpT ProductIcon__ProductIconContainer--large___2-NC8"
          data-test-id="cf-ui-navigation-icon"
        >
          <svg
            class="ProductIcon__ProductIcon___3MTbf ProductIcon__ProductIcon--positive___3gPLA"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M18.364 11.09h.909a2.727 2.727 0 110 5.456h-.91v3.181A2.278 2.278 0 0116.092 22h-3.91v-1.818a2.001 2.001 0 00-4 0V22H4.274A2.278 2.278 0 012 19.727v-3.909h1.818a2.001 2.001 0 000-4H2.01V7.91a2.27 2.27 0 012.264-2.273h3.182v-.909a2.727 2.727 0 115.454 0v.91h3.182a2.278 2.278 0 012.273 2.272v3.182zm-2.273 10c.749 0 1.363-.614 1.363-1.363v-4.09h1.819a1.818 1.818 0 000-3.637h-1.819V7.91c0-.75-.614-1.365-1.363-1.365H12V4.727a1.818 1.818 0 00-3.636 0v1.818H4.273c-.747 0-1.355.612-1.355 1.364v3h.9a2.91 2.91 0 012.91 2.91 2.91 2.91 0 01-2.91 2.908H2.91v3c0 .75.615 1.364 1.364 1.364h3v-.91a2.91 2.91 0 012.909-2.908 2.91 2.91 0 012.909 2.909v.909h3z"
            />
          </svg>
        </div>
      </div>
      <div
        class="Workbench__Workbench__header-title___3xp7b"
        data-test-id="workbench-title"
      >
        <h1
          class="Heading__Heading___83D3K"
          data-test-id="cf-ui-heading"
        >
          Apps
        </h1>
      </div>
      <div
        class="Workbench__Workbench__header-actions___mJoSR"
      >
        <a
          class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 TextLink__TextLink--primary___2Vc9F"
          data-test-id="cf-ui-text-link"
          href="account.organizations?navigationState=&pathname=/123/apps"
        >
          <span
            class="TabFocusTrap__TabFocusTrap___39Vty"
            tabindex="-1"
          >
            Manage private apps
          </span>
        </a>
      </div>
    </div>
    <div
      class="Workbench__Workbench__content-wrapper___3yWKi"
    >
      <div
        class="Workbench__Workbench__content___1U8bV"
        data-test-id="cf-ui-workbench-content"
      >
        <div
          class="Workbench__Workbench__content-inner___36_Hx Workbench__Workbench__content-inner--text___7nfTX"
        >
          <div>
            <svg
              aria-label="Loading apps list..."
              class="SkeletonContainer__SkeletonContainer___23jiu"
              data-test-id="cf-ui-skeleton-form"
              height="40"
              preserveAspectRatio="xMidYMid meet"
              role="img"
              width="600"
            >
              <title>
                Loading apps list...
              </title>
              <rect
                clip-path="url(#cf-ui-skeleton-clip-0)"
                height="100%"
                style="fill: url(#cf-ui-skeleton-clip-gradient-1);"
                width="100%"
                x="0"
                y="0"
              />
              <defs>
                <clippath
                  id="cf-ui-skeleton-clip-0"
                >
                  <rect
                    height="21"
                    rx="0"
                    ry="0"
                    width="100"
                    x="0"
                    y="0"
                  />
                </clippath>
                <lineargradient
                  id="cf-ui-skeleton-clip-gradient-1"
                >
                  <stop
                    offset="0%"
                    stop-color="#e5ebed"
                    stop-opacity="1"
                  >
                    <animate
                      attributeName="stop-color"
                      dur="2s"
                      id="animation-2"
                      repeatCount="indefinite"
                      values="#e5ebed; #f7f9fa; #e5ebed"
                    />
                  </stop>
                  <stop
                    offset="50%"
                    stop-color="#f7f9fa"
                    stop-opacity="1"
                  >
                    <animate
                      attributeName="stop-color"
                      begin="animation-2.begin+0.25s"
                      dur="2s"
                      repeatCount="indefinite"
                      values="#e5ebed; #f7f9fa; #e5ebed"
                    />
                  </stop>
                  <stop
                    offset="100%"
                    stop-color="#e5ebed"
                    stop-opacity="1"
                  >
                    <animate
                      attributeName="stop-color"
                      begin="animation-2.begin+0.5s"
                      dur="2s"
                      repeatCount="indefinite"
                      values="#e5ebed; #f7f9fa; #e5ebed"
                    />
                  </stop>
                </lineargradient>
              </defs>
            </svg>
            <div
              class="Card__Card___1_26G emotion-0 Card__Card--padding-large___2KzUK"
              data-test-id="cf-ui-card"
            >
              <svg
                aria-label="Loading apps list..."
                class="SkeletonContainer__SkeletonContainer___23jiu"
                data-test-id="cf-ui-skeleton-form"
                height="150"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                width="600"
              >
                <title>
                  Loading apps list...
                </title>
                <rect
                  clip-path="url(#cf-ui-skeleton-clip-3)"
                  height="100%"
                  style="fill: url(#cf-ui-skeleton-clip-gradient-4);"
                  width="100%"
                  x="0"
                  y="0"
                />
                <defs>
                  <clippath
                    id="cf-ui-skeleton-clip-3"
                  >
                    <rect
                      data-test-id="cf-ui-skeleton-image"
                      height="36"
                      rx="36"
                      ry="36"
                      width="36"
                      y="0"
                    />
                    <rect
                      height="8"
                      rx="0"
                      ry="0"
                      width="240"
                      x="50"
                      y="15"
                    />
                    <rect
                      height="8"
                      rx="0"
                      ry="0"
                      width="90"
                      x="510"
                      y="15"
                    />
                    <rect
                      data-test-id="cf-ui-skeleton-image"
                      height="36"
                      rx="36"
                      ry="36"
                      width="36"
                      y="55"
                    />
                    <rect
                      height="8"
                      rx="0"
                      ry="0"
                      width="240"
                      x="50"
                      y="70"
                    />
                    <rect
                      height="8"
                      rx="0"
                      ry="0"
                      width="90"
                      x="510"
                      y="70"
                    />
                    <rect
                      data-test-id="cf-ui-skeleton-image"
                      height="36"
                      rx="36"
                      ry="36"
                      width="36"
                      y="110"
                    />
                    <rect
                      height="8"
                      rx="0"
                      ry="0"
                      width="240"
                      x="50"
                      y="125"
                    />
                    <rect
                      height="8"
                      rx="0"
                      ry="0"
                      width="90"
                      x="510"
                      y="125"
                    />
                  </clippath>
                  <lineargradient
                    id="cf-ui-skeleton-clip-gradient-4"
                  >
                    <stop
                      offset="0%"
                      stop-color="#e5ebed"
                      stop-opacity="1"
                    >
                      <animate
                        attributeName="stop-color"
                        dur="2s"
                        id="animation-5"
                        repeatCount="indefinite"
                        values="#e5ebed; #f7f9fa; #e5ebed"
                      />
                    </stop>
                    <stop
                      offset="50%"
                      stop-color="#f7f9fa"
                      stop-opacity="1"
                    >
                      <animate
                        attributeName="stop-color"
                        begin="animation-5.begin+0.25s"
                        dur="2s"
                        repeatCount="indefinite"
                        values="#e5ebed; #f7f9fa; #e5ebed"
                      />
                    </stop>
                    <stop
                      offset="100%"
                      stop-color="#e5ebed"
                      stop-opacity="1"
                    >
                      <animate
                        attributeName="stop-color"
                        begin="animation-5.begin+0.5s"
                        dur="2s"
                        repeatCount="indefinite"
                        values="#e5ebed; #f7f9fa; #e5ebed"
                      />
                    </stop>
                  </lineargradient>
                </defs>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MarketplacePage should match snapshot of apps and contentful apps 1`] = `
.emotion-1 {
  background-color: #f7f9fa;
}

.emotion-0 {
  position: relative;
  margin-bottom: 1rem;
}

<div>
  <div
    class="Workbench__Workbench___THi9K emotion-1"
    data-test-id="cf-ui-workbench"
  >
    <div
      class="Workbench__Workbench__header___2wo2E"
      data-test-id="cf-ui-workbench-header"
    >
      <div
        class="Workbench__Workbench__header-icon___1kJlL"
      >
        <div
          class="ProductIcon__ProductIconContainer___KxjpT ProductIcon__ProductIconContainer--large___2-NC8"
          data-test-id="cf-ui-navigation-icon"
        >
          <svg
            class="ProductIcon__ProductIcon___3MTbf ProductIcon__ProductIcon--positive___3gPLA"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M18.364 11.09h.909a2.727 2.727 0 110 5.456h-.91v3.181A2.278 2.278 0 0116.092 22h-3.91v-1.818a2.001 2.001 0 00-4 0V22H4.274A2.278 2.278 0 012 19.727v-3.909h1.818a2.001 2.001 0 000-4H2.01V7.91a2.27 2.27 0 012.264-2.273h3.182v-.909a2.727 2.727 0 115.454 0v.91h3.182a2.278 2.278 0 012.273 2.272v3.182zm-2.273 10c.749 0 1.363-.614 1.363-1.363v-4.09h1.819a1.818 1.818 0 000-3.637h-1.819V7.91c0-.75-.614-1.365-1.363-1.365H12V4.727a1.818 1.818 0 00-3.636 0v1.818H4.273c-.747 0-1.355.612-1.355 1.364v3h.9a2.91 2.91 0 012.91 2.91 2.91 2.91 0 01-2.91 2.908H2.91v3c0 .75.615 1.364 1.364 1.364h3v-.91a2.91 2.91 0 012.909-2.908 2.91 2.91 0 012.909 2.909v.909h3z"
            />
          </svg>
        </div>
      </div>
      <div
        class="Workbench__Workbench__header-title___3xp7b"
        data-test-id="workbench-title"
      >
        <h1
          class="Heading__Heading___83D3K"
          data-test-id="cf-ui-heading"
        >
          Apps
        </h1>
      </div>
      <div
        class="Workbench__Workbench__header-actions___mJoSR"
      >
        <a
          class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 TextLink__TextLink--primary___2Vc9F"
          data-test-id="cf-ui-text-link"
          href="account.organizations?navigationState=&pathname=/123/apps"
        >
          <span
            class="TabFocusTrap__TabFocusTrap___39Vty"
            tabindex="-1"
          >
            Manage private apps
          </span>
        </a>
      </div>
    </div>
    <div
      class="Workbench__Workbench__content-wrapper___3yWKi"
    >
      <div
        class="Workbench__Workbench__content___1U8bV"
        data-test-id="cf-ui-workbench-content"
      >
        <div
          class="Workbench__Workbench__content-inner___36_Hx Workbench__Workbench__content-inner--text___7nfTX"
        >
          <div>
            <svg
              aria-label="Loading apps list..."
              class="SkeletonContainer__SkeletonContainer___23jiu"
              data-test-id="cf-ui-skeleton-form"
              height="40"
              preserveAspectRatio="xMidYMid meet"
              role="img"
              width="600"
            >
              <title>
                Loading apps list...
              </title>
              <rect
                clip-path="url(#cf-ui-skeleton-clip-18)"
                height="100%"
                style="fill: url(#cf-ui-skeleton-clip-gradient-19);"
                width="100%"
                x="0"
                y="0"
              />
              <defs>
                <clippath
                  id="cf-ui-skeleton-clip-18"
                >
                  <rect
                    height="21"
                    rx="0"
                    ry="0"
                    width="100"
                    x="0"
                    y="0"
                  />
                </clippath>
                <lineargradient
                  id="cf-ui-skeleton-clip-gradient-19"
                >
                  <stop
                    offset="0%"
                    stop-color="#e5ebed"
                    stop-opacity="1"
                  >
                    <animate
                      attributeName="stop-color"
                      dur="2s"
                      id="animation-20"
                      repeatCount="indefinite"
                      values="#e5ebed; #f7f9fa; #e5ebed"
                    />
                  </stop>
                  <stop
                    offset="50%"
                    stop-color="#f7f9fa"
                    stop-opacity="1"
                  >
                    <animate
                      attributeName="stop-color"
                      begin="animation-20.begin+0.25s"
                      dur="2s"
                      repeatCount="indefinite"
                      values="#e5ebed; #f7f9fa; #e5ebed"
                    />
                  </stop>
                  <stop
                    offset="100%"
                    stop-color="#e5ebed"
                    stop-opacity="1"
                  >
                    <animate
                      attributeName="stop-color"
                      begin="animation-20.begin+0.5s"
                      dur="2s"
                      repeatCount="indefinite"
                      values="#e5ebed; #f7f9fa; #e5ebed"
                    />
                  </stop>
                </lineargradient>
              </defs>
            </svg>
            <div
              class="Card__Card___1_26G emotion-0 Card__Card--padding-large___2KzUK"
              data-test-id="cf-ui-card"
            >
              <svg
                aria-label="Loading apps list..."
                class="SkeletonContainer__SkeletonContainer___23jiu"
                data-test-id="cf-ui-skeleton-form"
                height="150"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                width="600"
              >
                <title>
                  Loading apps list...
                </title>
                <rect
                  clip-path="url(#cf-ui-skeleton-clip-21)"
                  height="100%"
                  style="fill: url(#cf-ui-skeleton-clip-gradient-22);"
                  width="100%"
                  x="0"
                  y="0"
                />
                <defs>
                  <clippath
                    id="cf-ui-skeleton-clip-21"
                  >
                    <rect
                      data-test-id="cf-ui-skeleton-image"
                      height="36"
                      rx="36"
                      ry="36"
                      width="36"
                      y="0"
                    />
                    <rect
                      height="8"
                      rx="0"
                      ry="0"
                      width="240"
                      x="50"
                      y="15"
                    />
                    <rect
                      height="8"
                      rx="0"
                      ry="0"
                      width="90"
                      x="510"
                      y="15"
                    />
                    <rect
                      data-test-id="cf-ui-skeleton-image"
                      height="36"
                      rx="36"
                      ry="36"
                      width="36"
                      y="55"
                    />
                    <rect
                      height="8"
                      rx="0"
                      ry="0"
                      width="240"
                      x="50"
                      y="70"
                    />
                    <rect
                      height="8"
                      rx="0"
                      ry="0"
                      width="90"
                      x="510"
                      y="70"
                    />
                    <rect
                      data-test-id="cf-ui-skeleton-image"
                      height="36"
                      rx="36"
                      ry="36"
                      width="36"
                      y="110"
                    />
                    <rect
                      height="8"
                      rx="0"
                      ry="0"
                      width="240"
                      x="50"
                      y="125"
                    />
                    <rect
                      height="8"
                      rx="0"
                      ry="0"
                      width="90"
                      x="510"
                      y="125"
                    />
                  </clippath>
                  <lineargradient
                    id="cf-ui-skeleton-clip-gradient-22"
                  >
                    <stop
                      offset="0%"
                      stop-color="#e5ebed"
                      stop-opacity="1"
                    >
                      <animate
                        attributeName="stop-color"
                        dur="2s"
                        id="animation-23"
                        repeatCount="indefinite"
                        values="#e5ebed; #f7f9fa; #e5ebed"
                      />
                    </stop>
                    <stop
                      offset="50%"
                      stop-color="#f7f9fa"
                      stop-opacity="1"
                    >
                      <animate
                        attributeName="stop-color"
                        begin="animation-23.begin+0.25s"
                        dur="2s"
                        repeatCount="indefinite"
                        values="#e5ebed; #f7f9fa; #e5ebed"
                      />
                    </stop>
                    <stop
                      offset="100%"
                      stop-color="#e5ebed"
                      stop-opacity="1"
                    >
                      <animate
                        attributeName="stop-color"
                        begin="animation-23.begin+0.5s"
                        dur="2s"
                        repeatCount="indefinite"
                        values="#e5ebed; #f7f9fa; #e5ebed"
                      />
                    </stop>
                  </lineargradient>
                </defs>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MarketplacePage should match snapshot of apps loaded state 1`] = `
.emotion-1 {
  background-color: #f7f9fa;
}

.emotion-0 {
  position: relative;
  margin-bottom: 1rem;
}

<div>
  <div
    class="Workbench__Workbench___THi9K emotion-1"
    data-test-id="cf-ui-workbench"
  >
    <div
      class="Workbench__Workbench__header___2wo2E"
      data-test-id="cf-ui-workbench-header"
    >
      <div
        class="Workbench__Workbench__header-icon___1kJlL"
      >
        <div
          class="ProductIcon__ProductIconContainer___KxjpT ProductIcon__ProductIconContainer--large___2-NC8"
          data-test-id="cf-ui-navigation-icon"
        >
          <svg
            class="ProductIcon__ProductIcon___3MTbf ProductIcon__ProductIcon--positive___3gPLA"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M18.364 11.09h.909a2.727 2.727 0 110 5.456h-.91v3.181A2.278 2.278 0 0116.092 22h-3.91v-1.818a2.001 2.001 0 00-4 0V22H4.274A2.278 2.278 0 012 19.727v-3.909h1.818a2.001 2.001 0 000-4H2.01V7.91a2.27 2.27 0 012.264-2.273h3.182v-.909a2.727 2.727 0 115.454 0v.91h3.182a2.278 2.278 0 012.273 2.272v3.182zm-2.273 10c.749 0 1.363-.614 1.363-1.363v-4.09h1.819a1.818 1.818 0 000-3.637h-1.819V7.91c0-.75-.614-1.365-1.363-1.365H12V4.727a1.818 1.818 0 00-3.636 0v1.818H4.273c-.747 0-1.355.612-1.355 1.364v3h.9a2.91 2.91 0 012.91 2.91 2.91 2.91 0 01-2.91 2.908H2.91v3c0 .75.615 1.364 1.364 1.364h3v-.91a2.91 2.91 0 012.909-2.908 2.91 2.91 0 012.909 2.909v.909h3z"
            />
          </svg>
        </div>
      </div>
      <div
        class="Workbench__Workbench__header-title___3xp7b"
        data-test-id="workbench-title"
      >
        <h1
          class="Heading__Heading___83D3K"
          data-test-id="cf-ui-heading"
        >
          Apps
        </h1>
      </div>
      <div
        class="Workbench__Workbench__header-actions___mJoSR"
      >
        <a
          class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 TextLink__TextLink--primary___2Vc9F"
          data-test-id="cf-ui-text-link"
          href="account.organizations?navigationState=&pathname=/123/apps"
        >
          <span
            class="TabFocusTrap__TabFocusTrap___39Vty"
            tabindex="-1"
          >
            Manage private apps
          </span>
        </a>
      </div>
    </div>
    <div
      class="Workbench__Workbench__content-wrapper___3yWKi"
    >
      <div
        class="Workbench__Workbench__content___1U8bV"
        data-test-id="cf-ui-workbench-content"
      >
        <div
          class="Workbench__Workbench__content-inner___36_Hx Workbench__Workbench__content-inner--text___7nfTX"
        >
          <div>
            <svg
              aria-label="Loading apps list..."
              class="SkeletonContainer__SkeletonContainer___23jiu"
              data-test-id="cf-ui-skeleton-form"
              height="40"
              preserveAspectRatio="xMidYMid meet"
              role="img"
              width="600"
            >
              <title>
                Loading apps list...
              </title>
              <rect
                clip-path="url(#cf-ui-skeleton-clip-6)"
                height="100%"
                style="fill: url(#cf-ui-skeleton-clip-gradient-7);"
                width="100%"
                x="0"
                y="0"
              />
              <defs>
                <clippath
                  id="cf-ui-skeleton-clip-6"
                >
                  <rect
                    height="21"
                    rx="0"
                    ry="0"
                    width="100"
                    x="0"
                    y="0"
                  />
                </clippath>
                <lineargradient
                  id="cf-ui-skeleton-clip-gradient-7"
                >
                  <stop
                    offset="0%"
                    stop-color="#e5ebed"
                    stop-opacity="1"
                  >
                    <animate
                      attributeName="stop-color"
                      dur="2s"
                      id="animation-8"
                      repeatCount="indefinite"
                      values="#e5ebed; #f7f9fa; #e5ebed"
                    />
                  </stop>
                  <stop
                    offset="50%"
                    stop-color="#f7f9fa"
                    stop-opacity="1"
                  >
                    <animate
                      attributeName="stop-color"
                      begin="animation-8.begin+0.25s"
                      dur="2s"
                      repeatCount="indefinite"
                      values="#e5ebed; #f7f9fa; #e5ebed"
                    />
                  </stop>
                  <stop
                    offset="100%"
                    stop-color="#e5ebed"
                    stop-opacity="1"
                  >
                    <animate
                      attributeName="stop-color"
                      begin="animation-8.begin+0.5s"
                      dur="2s"
                      repeatCount="indefinite"
                      values="#e5ebed; #f7f9fa; #e5ebed"
                    />
                  </stop>
                </lineargradient>
              </defs>
            </svg>
            <div
              class="Card__Card___1_26G emotion-0 Card__Card--padding-large___2KzUK"
              data-test-id="cf-ui-card"
            >
              <svg
                aria-label="Loading apps list..."
                class="SkeletonContainer__SkeletonContainer___23jiu"
                data-test-id="cf-ui-skeleton-form"
                height="150"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                width="600"
              >
                <title>
                  Loading apps list...
                </title>
                <rect
                  clip-path="url(#cf-ui-skeleton-clip-9)"
                  height="100%"
                  style="fill: url(#cf-ui-skeleton-clip-gradient-10);"
                  width="100%"
                  x="0"
                  y="0"
                />
                <defs>
                  <clippath
                    id="cf-ui-skeleton-clip-9"
                  >
                    <rect
                      data-test-id="cf-ui-skeleton-image"
                      height="36"
                      rx="36"
                      ry="36"
                      width="36"
                      y="0"
                    />
                    <rect
                      height="8"
                      rx="0"
                      ry="0"
                      width="240"
                      x="50"
                      y="15"
                    />
                    <rect
                      height="8"
                      rx="0"
                      ry="0"
                      width="90"
                      x="510"
                      y="15"
                    />
                    <rect
                      data-test-id="cf-ui-skeleton-image"
                      height="36"
                      rx="36"
                      ry="36"
                      width="36"
                      y="55"
                    />
                    <rect
                      height="8"
                      rx="0"
                      ry="0"
                      width="240"
                      x="50"
                      y="70"
                    />
                    <rect
                      height="8"
                      rx="0"
                      ry="0"
                      width="90"
                      x="510"
                      y="70"
                    />
                    <rect
                      data-test-id="cf-ui-skeleton-image"
                      height="36"
                      rx="36"
                      ry="36"
                      width="36"
                      y="110"
                    />
                    <rect
                      height="8"
                      rx="0"
                      ry="0"
                      width="240"
                      x="50"
                      y="125"
                    />
                    <rect
                      height="8"
                      rx="0"
                      ry="0"
                      width="90"
                      x="510"
                      y="125"
                    />
                  </clippath>
                  <lineargradient
                    id="cf-ui-skeleton-clip-gradient-10"
                  >
                    <stop
                      offset="0%"
                      stop-color="#e5ebed"
                      stop-opacity="1"
                    >
                      <animate
                        attributeName="stop-color"
                        dur="2s"
                        id="animation-11"
                        repeatCount="indefinite"
                        values="#e5ebed; #f7f9fa; #e5ebed"
                      />
                    </stop>
                    <stop
                      offset="50%"
                      stop-color="#f7f9fa"
                      stop-opacity="1"
                    >
                      <animate
                        attributeName="stop-color"
                        begin="animation-11.begin+0.25s"
                        dur="2s"
                        repeatCount="indefinite"
                        values="#e5ebed; #f7f9fa; #e5ebed"
                      />
                    </stop>
                    <stop
                      offset="100%"
                      stop-color="#e5ebed"
                      stop-opacity="1"
                    >
                      <animate
                        attributeName="stop-color"
                        begin="animation-11.begin+0.5s"
                        dur="2s"
                        repeatCount="indefinite"
                        values="#e5ebed; #f7f9fa; #e5ebed"
                      />
                    </stop>
                  </lineargradient>
                </defs>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MarketplacePage should match snapshot of apps loaded with limited access 1`] = `
.emotion-1 {
  background-color: #f7f9fa;
}

.emotion-0 {
  position: relative;
  margin-bottom: 1rem;
}

<div>
  <div
    class="Workbench__Workbench___THi9K emotion-1"
    data-test-id="cf-ui-workbench"
  >
    <div
      class="Workbench__Workbench__header___2wo2E"
      data-test-id="cf-ui-workbench-header"
    >
      <div
        class="Workbench__Workbench__header-icon___1kJlL"
      >
        <div
          class="ProductIcon__ProductIconContainer___KxjpT ProductIcon__ProductIconContainer--large___2-NC8"
          data-test-id="cf-ui-navigation-icon"
        >
          <svg
            class="ProductIcon__ProductIcon___3MTbf ProductIcon__ProductIcon--positive___3gPLA"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M18.364 11.09h.909a2.727 2.727 0 110 5.456h-.91v3.181A2.278 2.278 0 0116.092 22h-3.91v-1.818a2.001 2.001 0 00-4 0V22H4.274A2.278 2.278 0 012 19.727v-3.909h1.818a2.001 2.001 0 000-4H2.01V7.91a2.27 2.27 0 012.264-2.273h3.182v-.909a2.727 2.727 0 115.454 0v.91h3.182a2.278 2.278 0 012.273 2.272v3.182zm-2.273 10c.749 0 1.363-.614 1.363-1.363v-4.09h1.819a1.818 1.818 0 000-3.637h-1.819V7.91c0-.75-.614-1.365-1.363-1.365H12V4.727a1.818 1.818 0 00-3.636 0v1.818H4.273c-.747 0-1.355.612-1.355 1.364v3h.9a2.91 2.91 0 012.91 2.91 2.91 2.91 0 01-2.91 2.908H2.91v3c0 .75.615 1.364 1.364 1.364h3v-.91a2.91 2.91 0 012.909-2.908 2.91 2.91 0 012.909 2.909v.909h3z"
            />
          </svg>
        </div>
      </div>
      <div
        class="Workbench__Workbench__header-title___3xp7b"
        data-test-id="workbench-title"
      >
        <h1
          class="Heading__Heading___83D3K"
          data-test-id="cf-ui-heading"
        >
          Apps
        </h1>
      </div>
      <div
        class="Workbench__Workbench__header-actions___mJoSR"
      >
        <a
          class="TextLink__TextLink___1biUr a11y__focus-outline--default___2hwb1 TextLink__TextLink--primary___2Vc9F"
          data-test-id="cf-ui-text-link"
          href="account.organizations?navigationState=&pathname=/123/apps"
        >
          <span
            class="TabFocusTrap__TabFocusTrap___39Vty"
            tabindex="-1"
          >
            Manage private apps
          </span>
        </a>
      </div>
    </div>
    <div
      class="Workbench__Workbench__content-wrapper___3yWKi"
    >
      <div
        class="Workbench__Workbench__content___1U8bV"
        data-test-id="cf-ui-workbench-content"
      >
        <div
          class="Workbench__Workbench__content-inner___36_Hx Workbench__Workbench__content-inner--text___7nfTX"
        >
          <div>
            <svg
              aria-label="Loading apps list..."
              class="SkeletonContainer__SkeletonContainer___23jiu"
              data-test-id="cf-ui-skeleton-form"
              height="40"
              preserveAspectRatio="xMidYMid meet"
              role="img"
              width="600"
            >
              <title>
                Loading apps list...
              </title>
              <rect
                clip-path="url(#cf-ui-skeleton-clip-12)"
                height="100%"
                style="fill: url(#cf-ui-skeleton-clip-gradient-13);"
                width="100%"
                x="0"
                y="0"
              />
              <defs>
                <clippath
                  id="cf-ui-skeleton-clip-12"
                >
                  <rect
                    height="21"
                    rx="0"
                    ry="0"
                    width="100"
                    x="0"
                    y="0"
                  />
                </clippath>
                <lineargradient
                  id="cf-ui-skeleton-clip-gradient-13"
                >
                  <stop
                    offset="0%"
                    stop-color="#e5ebed"
                    stop-opacity="1"
                  >
                    <animate
                      attributeName="stop-color"
                      dur="2s"
                      id="animation-14"
                      repeatCount="indefinite"
                      values="#e5ebed; #f7f9fa; #e5ebed"
                    />
                  </stop>
                  <stop
                    offset="50%"
                    stop-color="#f7f9fa"
                    stop-opacity="1"
                  >
                    <animate
                      attributeName="stop-color"
                      begin="animation-14.begin+0.25s"
                      dur="2s"
                      repeatCount="indefinite"
                      values="#e5ebed; #f7f9fa; #e5ebed"
                    />
                  </stop>
                  <stop
                    offset="100%"
                    stop-color="#e5ebed"
                    stop-opacity="1"
                  >
                    <animate
                      attributeName="stop-color"
                      begin="animation-14.begin+0.5s"
                      dur="2s"
                      repeatCount="indefinite"
                      values="#e5ebed; #f7f9fa; #e5ebed"
                    />
                  </stop>
                </lineargradient>
              </defs>
            </svg>
            <div
              class="Card__Card___1_26G emotion-0 Card__Card--padding-large___2KzUK"
              data-test-id="cf-ui-card"
            >
              <svg
                aria-label="Loading apps list..."
                class="SkeletonContainer__SkeletonContainer___23jiu"
                data-test-id="cf-ui-skeleton-form"
                height="150"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                width="600"
              >
                <title>
                  Loading apps list...
                </title>
                <rect
                  clip-path="url(#cf-ui-skeleton-clip-15)"
                  height="100%"
                  style="fill: url(#cf-ui-skeleton-clip-gradient-16);"
                  width="100%"
                  x="0"
                  y="0"
                />
                <defs>
                  <clippath
                    id="cf-ui-skeleton-clip-15"
                  >
                    <rect
                      data-test-id="cf-ui-skeleton-image"
                      height="36"
                      rx="36"
                      ry="36"
                      width="36"
                      y="0"
                    />
                    <rect
                      height="8"
                      rx="0"
                      ry="0"
                      width="240"
                      x="50"
                      y="15"
                    />
                    <rect
                      height="8"
                      rx="0"
                      ry="0"
                      width="90"
                      x="510"
                      y="15"
                    />
                    <rect
                      data-test-id="cf-ui-skeleton-image"
                      height="36"
                      rx="36"
                      ry="36"
                      width="36"
                      y="55"
                    />
                    <rect
                      height="8"
                      rx="0"
                      ry="0"
                      width="240"
                      x="50"
                      y="70"
                    />
                    <rect
                      height="8"
                      rx="0"
                      ry="0"
                      width="90"
                      x="510"
                      y="70"
                    />
                    <rect
                      data-test-id="cf-ui-skeleton-image"
                      height="36"
                      rx="36"
                      ry="36"
                      width="36"
                      y="110"
                    />
                    <rect
                      height="8"
                      rx="0"
                      ry="0"
                      width="240"
                      x="50"
                      y="125"
                    />
                    <rect
                      height="8"
                      rx="0"
                      ry="0"
                      width="90"
                      x="510"
                      y="125"
                    />
                  </clippath>
                  <lineargradient
                    id="cf-ui-skeleton-clip-gradient-16"
                  >
                    <stop
                      offset="0%"
                      stop-color="#e5ebed"
                      stop-opacity="1"
                    >
                      <animate
                        attributeName="stop-color"
                        dur="2s"
                        id="animation-17"
                        repeatCount="indefinite"
                        values="#e5ebed; #f7f9fa; #e5ebed"
                      />
                    </stop>
                    <stop
                      offset="50%"
                      stop-color="#f7f9fa"
                      stop-opacity="1"
                    >
                      <animate
                        attributeName="stop-color"
                        begin="animation-17.begin+0.25s"
                        dur="2s"
                        repeatCount="indefinite"
                        values="#e5ebed; #f7f9fa; #e5ebed"
                      />
                    </stop>
                    <stop
                      offset="100%"
                      stop-color="#e5ebed"
                      stop-opacity="1"
                    >
                      <animate
                        attributeName="stop-color"
                        begin="animation-17.begin+0.5s"
                        dur="2s"
                        repeatCount="indefinite"
                        values="#e5ebed; #f7f9fa; #e5ebed"
                      />
                    </stop>
                  </lineargradient>
                </defs>
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
